style: black format & ruff fixes

--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   jenkins:
-    image: jenkins/jenkins:lts-jdk17
+    build:
+      context: .
+      args:
+        DOCKER_GID: "${DOCKER_GID:-0}"
     user: root
     ports:
       - "8080:8080"
@@ -10,5 +13,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=true
+
 volumes:
   jenkins_home:
